--- a/pages/index.hbs
+++ b/pages/index.hbs
@@ -3,13 +3,12 @@
 
 <head>
 	<title>{{global.site_name}}</title>
-	<link rel="stylesheet" href="/assets/css/main.css">
-	<link href="https://fonts.googleapis.com/css?family=Lato:100,200" rel="stylesheet">
-	<style type="text/css"></style>
+	{{>head}}
 </head>
 
 <body>
 	{{!-- intro --}}
+	
 	{{>footer}}
 
 </body>
