--- a/pages/roznamcha.hbs
+++ b/pages/roznamcha.hbs
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>{{global.site_name}}</title>
-		<link rel="stylesheet" href="/assets/css/main.css">
-		<link href="https://fonts.googleapis.com/css?family=Lato:100,200" rel="stylesheet">
-		<style type="text/css"></style>
-	</head>
-	<body>
-		{{!-- intro --}}
 
+<head>
+	<title>{{global.site_name}}</title>
+	{{>head}}
+</head>
 
-		{{>footer}}
+<body>
+	{{!-- intro --}}
 
-	</body>
+	{{>footer}}
+
+</body>
 
 </html>
